// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechDebtsView when components prop is set to an empty array renders no table 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"display-1\\">0</span> tech debts
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <h4 class=\\"card-title\\">0 Tech Debts</h4>
            <!---->
            <p class=\\"card-text\\">
              <!---->
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts renders all the tech debts in a table 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <!---->
            <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">3</span> <b>High</b> tech debts
            </div>
            <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">3</span> <b>Medium</b> tech debts
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <h4 class=\\"card-title\\">6 Tech Debts</h4>
            <!---->
            <p class=\\"card-text\\">
              <table class=\\"table table-dark\\">
                <thead>
                  <tr>
                    <th class=\\"component\\">Component</th>
                    <th class=\\"priority\\">Priority</th>
                    <th class=\\"teams\\">Teams</th>
                    <th class=\\"description\\">Description</th>
                    <th class=\\"notes\\">Notes</th>
                    <th class=\\"links\\">Links</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 2 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 2 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 3 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 3 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 2 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 2 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 3 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 3 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                </tbody>
              </table>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__68\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__68__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__69\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__69_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__69_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__69_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__69_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__69_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__69_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__69_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__76\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__76__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__77\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__77_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__77_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__77_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__77_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__77_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__77_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__77_BV_option_5\\"><span>test-tag-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__84\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__84__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__85\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__85_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__85_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__85_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__85_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__85_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__85_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__89\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__89__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__90\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__90_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__92\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__92__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
                <option value=\\"test-component-id-3\\">test-component-id-3</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts when selecting a filter, the filter is applied to the tech debts in the table 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <!---->
            <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">3</span> <b>High</b> tech debts
            </div>
            <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">3</span> <b>Medium</b> tech debts
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <h4 class=\\"card-title\\">6 Tech Debts</h4>
            <!---->
            <p class=\\"card-text\\">
              <table class=\\"table table-dark\\">
                <thead>
                  <tr>
                    <th class=\\"component\\">Component</th>
                    <th class=\\"priority\\">Priority</th>
                    <th class=\\"teams\\">Teams</th>
                    <th class=\\"description\\">Description</th>
                    <th class=\\"notes\\">Notes</th>
                    <th class=\\"links\\">Links</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 2 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 2 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 3 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 3 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 2 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 2 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-2-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 2 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 3 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 3 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-3-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 3 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                </tbody>
              </table>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__154\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__154__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__155\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__155_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__155_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__155_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__155_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__155_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__155_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__162\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__162__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__163\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__163_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__163_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__163_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__163_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__163_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__163_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_5\\"><span>test-tag-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__170\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__170__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__171\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__171_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__171_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__171_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__175\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__175__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__176\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__176_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__176_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__178\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__178__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
                <option value=\\"test-component-id-3\\">test-component-id-3</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts when selecting a filter, the filter is applied to the tech debts in the table 2`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <!---->
            <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">1</span> <b>High</b> tech debt
            </div>
            <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">1</span> <b>Medium</b> tech debt
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <div class=\\"card-body\\">
            <h4 class=\\"card-title\\">2 Tech Debts</h4>
            <!---->
            <p class=\\"card-text\\">
              <table class=\\"table table-dark\\">
                <thead>
                  <tr>
                    <th class=\\"component\\">Component</th>
                    <th class=\\"priority\\">Priority</th>
                    <th class=\\"teams\\">Teams</th>
                    <th class=\\"description\\">Description</th>
                    <th class=\\"notes\\">Notes</th>
                    <th class=\\"links\\">Links</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 2</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 2</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 2 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr>
                    <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                    <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
                    <td class=\\"teams\\">
                      <ul>
                        <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                          <!---->
                          <!---->
                        </li>
                        <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                          <!---->
                          <!---->
                        </li>
                      </ul>
                    </td>
                    <td class=\\"description\\">
                      <div>
                        <p>Test Tech Debt Description 1 1</p>
                      </div>
                    </td>
                    <td class=\\"notes\\">
                      <div>
                        <p>Test Tech Debt Notes 1 1</p>
                      </div>
                    </td>
                    <td class=\\"links\\">
                      <ul>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 1</p>
                          </div>
                        </li>
                        <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                          <div>
                            <p>Test Tech Debt Link Description 1 1 2</p>
                          </div>
                        </li>
                      </ul>
                    </td>
                  </tr>
                </tbody>
              </table>
            </p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__154\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__154__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__155\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__155_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__155_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__155_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__155_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__155_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__155_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__155_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__162\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__162__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__163\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__163_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__163_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__163_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__163_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__163_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__163_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__163_BV_option_5\\"><span>test-tag-3-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__170\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__170__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__171\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__171_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__171_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__171_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__171_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__175\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__175__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__176\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__176_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__176_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__178\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__178__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
                <option value=\\"test-component-id-3\\">test-component-id-3</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
